Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55343

Client side window decorations are not removed/added when toggling fullscreen

XMLWordPrintable

      To reproduce:

      import QtQuick 2.7
      import QtQuick.Window 2.2
      
      Window {
          id: window
          width: 100
          height: 100
          color: "red"
          visible: true
      //    visibility: Window.FullScreen
          Shortcut {
              sequence: "F"
              onActivated: window.visibility = window.visibility === Window.FullScreen ? Window.Windowed : Window.FullScreen
          }
      }
      

      Press F to toggle fullscreen. When the window goes to fullscreen the decorations are not removed.

      Similarly, if the window starts in fullscreen state, decorations are not there initially, and are not added when going out of fullscreen.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            johanhelsing Johan Helsing
            johanhelsing Johan Helsing
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes